# ACE-Step-1.5

./: .gitignore  README.md  profile_inference.py  pyproject.toml  requirements.txt
.claude/skills/acestep/: SKILL.md
.claude/skills/acestep-simplemv/scripts/: render-mv.sh  render.mjs
.claude/skills/acestep/scripts/: acestep.sh  config.json
.claude/skills/lyrics-transcription/: SKILL.md
.claude/skills/lyrics-transcription/scripts/: lyrics-transcription.sh
ace_studio_streamlit/: .gitignore  INSTALL.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  config.py  main.py  requirements.txt  run.bat  run.sh
ace_studio_streamlit/.streamlit/: config.toml  secrets.toml
ace_studio_streamlit/components/: __init__.py  audio_player.py  batch_generator.py  dashboard.py  editor.py  editor_audio_picker.py  editor_runner.py  editor_tasks.py  editor_waveform.py  generation_wizard.py  settings_panel.py
ace_studio_streamlit/utils/: __init__.py  audio_utils.py  cache.py  project_manager.py
acestep/: acestep_v15_pipeline.py  gpu_config.py  handler.py  inference.py  llm_inference.py  model_downloader.py  openrouter_adapter.py
acestep/core/generation/handler/: __init__.py  init_service.py  init_service_catalog.py  init_service_loader.py  init_service_memory_transfer.py  init_service_orchestrator.py  init_service_setup.py  init_service_test.py  lora_manager.py  progress.py  training_preset.py  training_preset_test.py
acestep/core/generation/handler/lora/: controls.py  lifecycle.py  registry_state.py
acestep/gradio_ui/: api_routes.py
acestep/gradio_ui/events/: __init__.py  generation_handlers.py  generation_handlers_test.py  results_handlers.py  training_handlers.py
acestep/gradio_ui/i18n/: en.json  he.json  ja.json  zh.json
acestep/gradio_ui/interfaces/: generation.py  training.py
acestep/mlx_vae/: __init__.py  convert.py  model.py
acestep/third_parts/nano-vllm/nanovllm/engine/: model_runner.py
acestep/training/: configs.py  lora_utils.py  path_safety.py  trainer.py
docs/: lora-scale-deterministic-registry-note-2026-02-10.md
docs/en/: GPU_COMPATIBILITY.md  INSTALL.md  LoRA_Training_Tutorial.md
docs/ja/: GPU_COMPATIBILITY.md  LoRA_Training_Tutorial.md
docs/ko/: LoRA_Training_Tutorial.md
docs/zh/: GPU_COMPATIBILITY.md  LoRA_Training_Tutorial.md
playground/: playground.md  playground_handler.py  playground_ui.py  studio_bridge.py
